styling for vue lab

--- a/Code/jesse_pena/js/lab-09b/lab-09b.css
+++ b/Code/jesse_pena/js/lab-09b/lab-09b.css
@@ -2,3 +2,19 @@ html {
     background-color: black;
     color:lightslategrey;
 }
+
+header {
+    text-align: center;
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+
+#randomQuote {
+    text-align: center;
+    color: yellow;
+}
+
+#styleMe {
+    background-color: lightblue;
+    color:black;
+}
