--- a/Code/jesse_pena/js/lab-12/lab-12.css
+++ b/Code/jesse_pena/js/lab-12/lab-12.css
@@ -1,3 +1,26 @@
 html {
     background-color: lightblue;
 }
+
+.strikeThrough {
+    text-decoration: line-through;
+}
+
+h1 {
+    text-align: center;
+}
+
+input[type="text"] {
+    display: block;
+    margin : 0 auto;
+}
+
+#toDoList{
+    width: 50%;
+    float: left;
+}
+
+#complete{
+    width: 50%;
+    float: right;
+}
