--- a/Code/jesse_pena/js/calculator/calculator.css
+++ b/Code/jesse_pena/js/calculator/calculator.css
@@ -1,6 +1,7 @@
 html {
     font-size: 62.5%;
     box-sizing: border-box;
+    background-color: lightblue;
 }
 
 *, *::before, *::after {
@@ -35,7 +36,7 @@ button {
     height: 60px;
     background-color: #fff;
     border-radius: 3px;
-    border: 1px solid #c4c4c4;
+    border: 1px solid black;
     background-color: transparent;
     font-size: 2rem;
     color: #333;
@@ -80,4 +81,5 @@ button:hover {
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
     padding: 20px;
+    background-color: pink;
 }
