--- a/Code/jesse_pena/js/calculator/calculator.css
+++ b/Code/jesse_pena/js/calculator/calculator.css
@@ -69,6 +69,11 @@ button:hover {
     height: 100%;
 }
 
+#header{
+    font-size: 50px;
+    text-align: center;
+}
+
 @media screen and (max-width: 950px) {
     .equal-sign {
         background-color: yellow;
@@ -81,5 +86,5 @@ button:hover {
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
     padding: 20px;
-    background-color: pink;
+    background-color: lightgray;
 }
