--- a/4 Django/examples/horrorMovies/templates/movies/home.html
+++ b/4 Django/examples/horrorMovies/templates/movies/home.html
@@ -6,6 +6,6 @@
     <p class="lead">This is the worlds best horror movie app</p>
     <hr class="my-4">
     <p>It has everything you need</p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" href="http://localhost:8000/list" role="button">See all the scary stuff</a>
   </div>
 {% endblock %}
