--- a/Code/jesse_pena/django_to_do/templates/to_do/list.html
+++ b/Code/jesse_pena/django_to_do/templates/to_do/list.html
@@ -19,6 +19,13 @@
 
 {% endfor %}
 
+<h1>add movie</h1>
+
+<form action="{% url 'add_item' %}" method='POST'>form</form>
+    {% csrf_token %}
+    <input type="text" name='to_do_item'>
+    <input type="submit" value='add'>
+
 
     
 
