--- a/Code/jesse_pena/django_to_do/templates/to_do/add_item.html
+++ b/Code/jesse_pena/django_to_do/templates/to_do/add_item.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>add movie</h1>
 
-<form action="{% url 'add_item' %}" method='POST'>form</form>
+<form action="{% url 'add_item' %}" method='POST'>
     {% csrf_token %}
     <input type="text" name='to_do_item'>
     <input type="submit" value='add'>
