updated django todo

--- a/Code/jesse_pena/django_to_do/templates/to_do/home.html
+++ b/Code/jesse_pena/django_to_do/templates/to_do/home.html
@@ -6,6 +6,7 @@
     <p >THIS IS HOME.HTML</p>
     <hr >
     
-    <a  href="http://localhost:8000/list" role="button">CHECK OUT YOUR TO DO LIST</a>
+    <a  href="http://localhost:8000/list" role="button">CHECK OUT YOUR TO DO LIST</a><br>
+    <a href="http://localhost:8000/add_item" ROLE="button">ADD AN ITEM</a>
   </div>
 {% endblock %}
