added counter to model

--- a/Code/jesse_pena/django_url_shortener/templates/url_shortener/home.html
+++ b/Code/jesse_pena/django_url_shortener/templates/url_shortener/home.html
@@ -13,7 +13,8 @@
   <!-- <h1> {{ url.shortened_url }} </h1> -->
   <!-- <a href="http://{{ url.shortened_url }}"> your_url/{{ url.random_string_database }}</a><br> -->
   <a href="http://127.0.0.1:8000/{{ url.id }}"> your_url/{{ url.random_string_database }}</a><br>
-  <p>{{ url.id }}</p>
+  <!-- <p>{{ url.id }}</p> -->
+  <p>{{ url.count }}</p>
   
 
   {% endfor %}
