--- a/Code/jesse_pena/django_url_shortener/templates/base.html
+++ b/Code/jesse_pena/django_url_shortener/templates/base.html
@@ -4,7 +4,13 @@
 <body>
     <header>
         BASE.HTML
-    </header>>
+    </header>
+    <nav>
+        <a href="http://127.0.0.1:8000/users/register">Register</a>
+        <a href="http://127.0.0.1:8000/users/login">Login</a>
+        <a href="http://127.0.0.1:8000/users/profile">My Profile</a>
+        <a href="http://127.0.0.1:8000/users/logout">Logout</a>
+    </nav>
     {% block content %}
     {% endblock %}
 </body>
