--- a/Code/jesse_pena/django_url_shortener/templates/base.html
+++ b/Code/jesse_pena/django_url_shortener/templates/base.html
@@ -3,13 +3,21 @@
 </head>
 <body>
     <header>
-        BASE.HTML
+        URL SHORTENER
     </header>
     <nav>
-        <a href="http://127.0.0.1:8000/users/register">Register</a>
-        <a href="http://127.0.0.1:8000/users/login">Login</a>
-        <a href="http://127.0.0.1:8000/users/profile">My Profile</a>
-        <a href="http://127.0.0.1:8000/users/logout">Logout</a>
+        
+        <a href="http://127.0.0.1:8000/">Home</a>
+        
+        {% if request.user.is_authenticated %}
+            <a href="http://127.0.0.1:8000/users/profile">My Profile</a>
+            <a href="http://127.0.0.1:8000/users/logout">Logout</a>
+        {% else %}
+            <a href="http://127.0.0.1:8000/users/register">Register</a>
+            <a href="http://127.0.0.1:8000/users/login">Login</a>
+        {% endif %}
+        
+        
     </nav>
     {% block content %}
     {% endblock %}
